# horned-functional

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
ci/travis/: deploy.sh  script.sh
data/: apo.obo.ofn  hao.obo.ofn  ms.obo.ofn  peco.obo.ofn  ro.obo.ofn
src/: as_ofn.rs  bcp47.pest  error.rs  from_fn_str.rs  from_ofn.rs  from_pair.rs  lib.rs  ofn.pest  owl.pest  parser.rs  rfc3987.pest  sparql.pest  to_ofn.rs
tests/: foundry.rs
tests/data/: aeo.ofn  aero.ofn  amphx.ofn  apo.ofn  bco.ofn  bfo.ofn  bila.ofn  bspo.ofn  cdao.ofn  ceph.ofn  cheminf.ofn  chiro.ofn  cio.obo.ofn  cio.ofn  clao.ofn  clyh.ofn  cob.ofn  core.ofn  cro.ofn  cteno.ofn  cto.ofn  ddanat.ofn  ddpheno.ofn  depictions.ofn  dideo.ofn  download.py  duo.ofn  ecao.ofn  exo.ofn  fao.ofn  fbbi.ofn  fbdv.ofn  fix.ofn  gecko.ofn  genepio.ofn  geno.ofn  geo.ofn  hancestro.ofn  hom.ofn  hsapdv.ofn  (+60 more)
