[package]
name = "horned-functional"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "An OWL2 Functional-style Syntax parser for horned-owl"
repository = "https://github.com/fastobo/horned-functional"
readme = "README.md"
keywords = ["owl", "syntax", "parser", "functional", "owl2"]
categories = ["science", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges.travis-ci]
repository = "fastobo/horned-functional"
[badges.codecov]
repository = "fastobo/horned-functional"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/horned-functional"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
horned-owl = "0.6.0"
curie = "0.1.0"
enum_meta = "0.6.0"
err-derive = "0.1.5"

[dev-dependencies]
matches = "0.1.8"
ureq = "0.11.0"

[features]
_doc = []

[package.metadata.docs.rs]
features = [ "_doc" ]
